--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "watch": "^1.0.1"
   },
   "dependencies": {
+    "atob": "^2.0.3",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "github": "^8.1.1",
     "lodash": "^4.12.0",
     "request": "^2.79.0",
-    "request-promise-native": "^1.0.3"
+    "request-promise-native": "^1.0.3",
+    "winston": "^2.3.1"
   },
   "license": "MIT",
   "config": {
