--- a/package.json
+++ b/package.json
@@ -20,24 +20,25 @@
     "commit": "git-cz"
   },
   "devDependencies": {
-    "@usabilla/js-styleguide": "^1.0.0",
+    "@usabilla/js-styleguide": "^1.3.0",
     "all-contributors-cli": "^3.0.7",
     "commitizen": "^2.9.5",
     "cz-conventional-changelog": "^1.2.0",
-    "eslint": "^3.12.1",
+    "eslint": "^3.14.1",
     "jasmine": "^2.5.2",
     "jasmine-spec-reporter": "^3.1.0",
-    "validate-commit-msg": "^2.10.1",
+    "validate-commit-msg": "^2.11.1",
     "watch": "^1.0.1"
   },
   "dependencies": {
-    "atob": "^2.0.3",
     "body-parser": "^1.16.0",
+    "child-process-promise": "^2.2.0",
     "express": "^4.14.0",
     "github": "^8.1.1",
     "lodash": "^4.12.0",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
+    "rimraf": "^2.5.4",
     "winston": "^2.3.1"
   },
   "license": "MIT",
