--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.14.0",
     "github": "^8.1.1",
     "lodash": "^4.12.0",
+    "now-logs": "^0.0.7",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
     "rimraf": "^2.5.4",
