Add @spirosikmd as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,20 +1,18 @@
 {
-  "projectName": "all-contributors-bot",
+  "projectName": "all-contributors-webhook",
   "projectOwner": "spirosikmd",
   "files": [
     "README.md"
   ],
   "imageSize": 100,
-  "commit": false,
+  "commit": true,
   "contributors": [
     {
       "login": "spirosikmd",
       "name": "Spyros Ioakeimidis",
       "avatar_url": "https://avatars.githubusercontent.com/u/1057324?v=3",
       "profile": "http://www.spyros.io",
-      "contributions": [
-        "code"
-      ]
+      "contributions": []
     }
   ]
 }
