Update @spirosikmd as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -12,7 +12,9 @@
       "name": "Spyros Ioakeimidis",
       "avatar_url": "https://avatars.githubusercontent.com/u/1057324?v=3",
       "profile": "http://www.spyros.io",
-      "contributions": []
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
